# goldenscript

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
goldenscript-macros/: Cargo.toml
goldenscript-macros/src/: lib.rs
src/: command.rs  lib.rs  parser.rs  runner.rs
tests/: btreemap  btreemap.rs  debug.rs  derive.rs  hooks  hooks.rs  tests.rs
tests/dateparser/: dateparser
tests/derive/fail/: argument_layout.rs  argument_layout.stderr  command_attributes.rs  command_attributes.stderr  derive_targets.rs  derive_targets.stderr  field_attributes.rs  field_attributes.stderr  field_types.rs  field_types.stderr  tag_and_prefix_layout.rs  tag_and_prefix_layout.stderr
tests/derive/pass/: command.rs
tests/errors/: bare_command.error  bare_prefix.error  bare_prefix.in  bare_tag.error  bare_tag.in  empty_arg_key.error  empty_arg_key.in  empty_block.error  empty_command.error  empty_command.in  empty_prefix.error  empty_prefix.in  empty_tag.error  empty_tag.in  fail_before_prefix.error  fail_before_prefix.in  fail_before_silence.error  fail_before_silence.in  fail_error.error  fail_error.in  fail_ok_unexpected.error  fail_ok_unexpected.in  fail_panic.in  space_start.error  space_start.in  space_start_silent.error  space_start_silent.in  string_bare_backslash.error  string_escape_bare_backslash.in  string_escape_hex_char.error  string_escape_hex_char.in  string_escape_hex_single.error  string_escape_hex_single.in  string_escape_unicode_char.error  string_escape_unicode_char.in  string_escape_unicode_empty.error  string_escape_unicode_empty.in  string_escape_unicode_long.error  string_escape_unicode_long.in  string_missing_end_quote.error  (+5 more)
tests/generate/: empty_output.in  empty_output.out
tests/scripts/: commands  comments  dos_line_endings  fail  hooks  output  silent  strings  whitespace
