[package]
name = "goldenscript"
version = "0.7.0"
description = "A scriptable, data-driven test framework using golden masters"
categories = ["development-tools::testing"]
authors = ["Erik Grinaker <erik@grinaker.me>"]
license = "Apache-2.0"
homepage = "https://github.com/erikgrinaker/goldenscript"
repository = "https://github.com/erikgrinaker/goldenscript"
edition = "2021"

[dependencies]
goldenfile = "1.11"
nom = "8.0"
nom_locate = "5.0"

[dev-dependencies]
test_each_file = "0.3"
